--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,4 @@
-sources:
+removed_sources:
   kaccessible-15.08.0.tar.xz: a4c2f452f8dd239baead4b28a186287b08bad640
+sources:
+  kaccessible-15.08.1.tar.xz: af272ddd47e8a596b3c29aa8620323c7e6ec1247
